tests/gabc-dump/should-fail/unopened-overbrace.gabc
name: unopened overbrace;
%%
(c4) g(g) h(h[ocb:1}])
